--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ wgpu = "22.0"
 pollster = "0.3"
 bytemuck = { version = "1.16", features = ["derive"] }
 clap = { version = "4.5.26", features = ["derive"] }
+toml = "0.8.19"
+serde = { version = "1.0.217", features = ["derive"] }
