--- a/examples/circular/circular.toml
+++ b/examples/circular/circular.toml
@@ -7,3 +7,6 @@ shader_type = "fragment"
 label = "Circular Pattern Shader"
 entry_point = "fs_main"
 file = "fragment.wgsl"
+
+[hot_reload]
+enabled = true
