--- a/examples/ping_pong/reaction_diffusion.toml
+++ b/examples/ping_pong/reaction_diffusion.toml
@@ -4,10 +4,7 @@ height = 600
 
 [[pipeline]]
 shader_type = "fragment"
-label = "Trail Effect"
+label = "Reaction Diffusion"
 entry_point = "fs_main"
-file = "trail.wgsl"
-persistent = true
-
-[hot_reload]
-enabled = true
+file = "reaction_diffusion.wgsl"
+ping_pong = true
