--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,5 @@ Cargo.lock
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Save develoopment progress and TODOs for AI agent
-.progress/
+# Save ADRs, development progress and TODOs for AI agent
+.adr/
