--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,13 +32,13 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --workspace --verbose
 
       - name: Check formatting
-        run: cargo fmt -- --check
+        run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy -- -D clippy::correctness -D clippy::suspicious -D clippy::complexity -W clippy::perf -W clippy::style
+        run: cargo clippy --workspace --all-targets -- -D clippy::correctness -D clippy::suspicious -D clippy::complexity -W clippy::perf -W clippy::style
 
   build:
     name: Build
@@ -65,12 +65,12 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        run: cargo build --release --target=aarch64-apple-darwin
+        run: cargo build --workspace --release --target=aarch64-apple-darwin
 
       - name: Package
         run: >
           zip --junk-paths
-          shekere-aarch64-apple-darwin.zip target/aarch64-apple-darwin/release/shekere
+          shekere-aarch64-apple-darwin.zip target/aarch64-apple-darwin/release/shekere-cli
 
       - name: Upload
         uses: actions/upload-artifact@v4
