--- a/shekere-gui/package.json
+++ b/shekere-gui/package.json
@@ -19,6 +19,7 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0"
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.4.0"
   }
 }
