--- a/shekere-gui/src-tauri/Cargo.toml
+++ b/shekere-gui/src-tauri/Cargo.toml
@@ -23,11 +23,11 @@ toml = "0.8.19"
 uuid = { version = "1.0", features = ["v4"] }
 bytemuck = { version = "1.0", features = ["derive"] }
 
-# WebGPU and headless rendering dependencies
-winit.workspace = true
+# WebGPU for texture operations (through shekere-core)
 wgpu.workspace = true
-pollster.workspace = true
+# Logging - keep for error reporting
 log.workspace = true
+env_logger = "0.11"
 
 [features]
 # by default Tauri runs in production mode
