--- a/shekere-gui/src-tauri/Cargo.toml
+++ b/shekere-gui/src-tauri/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "shekere-gui"
-version = "0.13.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "GUI application for shekere creative coding tool"
 
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+serde_json.workspace = true
+serde.workspace = true
 tauri = { version = "2.0", features = ["rustls-tls"] }
 tauri-plugin-dialog = "2.0"
 
@@ -17,17 +20,17 @@ tauri-plugin-dialog = "2.0"
 shekere-core = { path = "../../shekere-core" }
 
 # Additional dependencies for GUI functionality
-thiserror = "1.0"
-tokio = { version = "1.0", features = ["full"] }
-toml = "0.8.19"
-uuid = { version = "1.0", features = ["v4"] }
+thiserror.workspace = true
+tokio.workspace = true
+toml.workspace = true
+uuid.workspace = true
 bytemuck = { version = "1.0", features = ["derive"] }
 
 # WebGPU for texture operations (through shekere-core)
 wgpu.workspace = true
 # Logging - keep for error reporting
 log.workspace = true
-env_logger = "0.11"
+env_logger.workspace = true
 
 [features]
 # by default Tauri runs in production mode
