--- a/shekere-core/Cargo.toml
+++ b/shekere-core/Cargo.toml
@@ -20,6 +20,7 @@ env_logger.workspace = true
 # Serialization
 toml.workspace = true
 serde.workspace = true
+serde_json = "1.0"
 
 # Audio and networking
 rosc.workspace = true
@@ -33,6 +34,39 @@ midir.workspace = true
 notify.workspace = true
 thiserror.workspace = true
 
+# WASM dependencies
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+js-sys = "0.3"
+web-sys = { version = "0.3", features = [
+    "console",
+    "Window",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "WebGl2RenderingContext",
+    "CanvasRenderingContext2d",
+    "ImageData",
+    "Gpu",
+    "GpuAdapter",
+    "GpuDevice",
+    "GpuQueue",
+    "GpuCommandEncoder",
+    "GpuRenderPassEncoder",
+    "GpuBuffer",
+    "GpuTexture",
+    "GpuTextureView",
+    "GpuSampler",
+    "GpuBindGroup",
+    "GpuBindGroupLayout",
+    "GpuPipelineLayout",
+    "GpuRenderPipeline",
+    "GpuShaderModule",
+    "Navigator",
+] }
+wasm-bindgen-futures = "0.4"
+console_error_panic_hook = "0.1"
+
 [dev-dependencies]
 tempfile.workspace = true
 tokio.workspace = true
@@ -40,3 +74,4 @@ tokio.workspace = true
 [lib]
 name = "shekere_core"
 path = "src/lib.rs"
+crate-type = ["cdylib", "rlib"]
