--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,18 @@ license = "MIT"
 repository = "https://github.com/katk3n/shekere"
 
 [dependencies]
-winit = { version = "0.29", features = ["rwh_05"] }
+bevy = { version = "0.16.1", default-features = false, features = [
+    "bevy_winit",           # Window management
+    "bevy_render",          # Rendering system
+    "bevy_core_pipeline",   # Basic rendering pipeline
+    "bevy_asset",           # Asset management
+    "bevy_sprite",          # 2D sprite rendering
+    "x11"                   # Platform support
+] }
+winit = { version = "0.29", features = ["rwh_05"] }  # Temporary - will be removed after migration
 env_logger = "0.10"
 log = "0.4"
-wgpu = "22.0"
-pollster = "0.3"
+wgpu = "24.0"
 bytemuck = { version = "1.16", features = ["derive"] }
 clap = { version = "4.5.26", features = ["derive"] }
 toml = "0.8.19"
