implement hot reload

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ spectrum-analyzer = "1.6.0"
 notify = "6.1.1"
 midir = "0.10.0"
 thiserror = "1.0"
+naga = { version = "24.0", features = ["wgsl-in"] }
 
 [dev-dependencies]
 tempfile = "3.8.1"
